--- a/accommodation/accomm_details/accom_detail_two/detail_two.css
+++ b/accommodation/accomm_details/accom_detail_two/detail_two.css
@@ -42,7 +42,7 @@ body {
     padding: 16px 14px;
     text-decoration: none;
     font-size: 3vw;
-    color: rgb(255, 138, 0);
+    color:rgb(209, 165, 35);
     cursor: pointer;
   }
   .contributor a {
@@ -51,7 +51,7 @@ body {
     padding: 16px 14px;
     text-decoration: none;
     font-size: 3vw;
-    color: rgb(255, 138, 0);
+    color: rgb(209, 165, 35);
     cursor: pointer;
   
   }
@@ -67,7 +67,7 @@ body {
     border-radius: 30px;
     border: none;
     padding: 0;
-    background-color: rgb(255, 138, 0);
+    background-color:rgb(209, 165, 35);
   }
   #contributor a {
     color: white;
@@ -88,9 +88,15 @@ body {
     text-decoration: none;
     color:grey;
   }
+  #order{
+    text-decoration: underline;
+  }
   main{
     background-color: rgb(255,247,223);
     padding:0 0 5px;
+  }
+  .bungalow-info{
+    margin-top: 15px;
   }
   .info-wrap{
     color:grey;
@@ -220,7 +226,7 @@ body {
         text-decoration: none;
         font-size: 2vw;
         margin: 15px 0 0 0;
-        color: rgb(255, 138, 0);
+        color: rgb(209, 165, 35);
       }
       .topnav a:not(:last-child) {
         display: block;
@@ -247,6 +253,9 @@ body {
       }
       .figure2{
         padding-left: 25px;
+      }
+      .bungalow-info{
+        margin-top: 30px;
       }
       .info{
         font-size: 2vw;
@@ -301,7 +310,7 @@ body {
         text-decoration: none;
         font-size: 1.5vw;
         margin: 25px 0 0 0;
-        color: rgb(255, 138, 0);
+        color: rgb(209, 165, 35);
       }
       .topnav a:not(:last-child) {
         display: block;
@@ -331,6 +340,9 @@ body {
       }
       .figure2{
         padding-left: 0px;
+      }
+      .bungalow-info{
+        margin-top: 60px;
       }
       .info{
         font-size: 1.5vw;
