--- a/about/about.css
+++ b/about/about.css
@@ -42,7 +42,7 @@ body {
     padding: 16px 14px;
     text-decoration: none;
     font-size: 3vw;
-    color: rgb(255, 138, 0);
+    color: rgb(209, 165, 35);
     cursor: pointer;
   }
   .contributor a {
@@ -51,7 +51,7 @@ body {
     padding: 16px 14px;
     text-decoration: none;
     font-size: 3vw;
-    color: rgb(255, 138, 0);
+    color: rgb(209, 165, 35);
     cursor: pointer;
   
   }
@@ -67,7 +67,7 @@ body {
     border-radius: 30px;
     border: none;
     padding: 0;
-    background-color: rgb(255, 138, 0);
+    background-color:rgb(209, 165, 35);
   }
   #contributor a {
     color: white;
@@ -88,7 +88,7 @@ body {
     padding-top: 20px;
   }
   .explore {
-    color:rgb(255, 138, 0);
+    color:rgb(209, 165, 35);
     margin-left: 10px;
     line-height: 30px;
     font-size: 3vw;
@@ -110,7 +110,7 @@ body {
     height: auto;
   }
   .explore1{
-    color:rgb(255, 138, 0);
+    color:rgb(209, 165, 35);
     margin:50px 0 0 10px;
     line-height: 30px;
     font-size: 3vw;
@@ -199,7 +199,7 @@ body {
         text-decoration: none;
         font-size: 2vw;
         margin: 15px 0 0 0;
-        color: rgb(255, 138, 0);
+        color: rgb(209, 165, 35);
       }
       .topnav a:not(:last-child) {
         display: block;
@@ -235,15 +235,24 @@ body {
         font-size: 2vw;
         max-width: 50%;
         padding: 0 0 0 20px;
+        order:2;
       }
       .img-cont {
         max-width: 50%;
-       
+      }
+      #img-cont{
+        order:2;
       }
       .home-img {
         max-width: 95%;
         height: auto;
         margin-top: 20px;
+      }
+      #home-img{
+        margin-left:60px;
+      }
+      .home-img1{
+        margin-left: 25px;
       }
       .sign p {
         margin-top: 30px;
@@ -307,7 +316,7 @@ body {
         text-decoration: none;
         font-size: 1.5vw;
         margin: 25px 0 0 0;
-        color: rgb(255, 138, 0);
+        color: rgb(209, 165, 35);
       }
       .topnav a:not(:last-child) {
         display: block;
@@ -333,24 +342,33 @@ body {
         width: 100px;
       }
       .explore {
-        max-width: 45%;
+        max-width: 40%;
         font-size: 1.5vw;
-        line-height: 50px;
+        line-height: 45px;
         padding: 0 0 0 20px;
       }
       .explore1{
         font-size: 1.5vw;
         max-width: 45%;
         padding: 0 0 0 20px;
+        order:2;
 
+      }
+      #img-cont{
+        order:2;
+        /* margin-left: 30px; */
       }
       .img-cont {
         max-width: 50%;
+        text-align: center;
       }
       .home-img {
         max-width: 95%;
         height: auto;
         margin-top: 20px;
+      }
+      #home-img{
+        margin-left:100px;
       }
       .sign p {
         margin-top: 60px;
